[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-demo"
version = "2025.08.03"
dependencies = [
  "chromadb",
  "google-genai>=1.0.0",
  "socksio>=1.0.0",
  "langchain_text_splitters",
]
requires-python = ">=3.10"
authors = [
  {name = "Levan liu", email = "levan.liu@advantest.com"},
]
maintainers = [
  {name = "Levan liu", email = "levan.liu@advantest.com"},
]
description = "rag demo!"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[tool.hatch.build.targets.wheel]
include = ["chunk.py","embed.py","query_wrapper.py","recursiveCharacterTextSplitter.py"]
